tests/ui/coherence/negative-coherence-placeholder-region-constraints-on-unification.explicit.stderr
error: conflicting implementations of trait `FnMarker` for type `fn(&_)`
  --> $DIR/negative-coherence-placeholder-region-constraints-on-unification.rs:21:1
   |
LL | impl<T: ?Sized + Marker> FnMarker for fn(T) {}
   | ------------------------------------------- first implementation here
LL | impl<T: ?Sized> FnMarker for fn(&T) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `fn(&_)`
   |
   = warning: the behavior may change in a future release
   = note: for more information, see issue #56105 <https://github.com/rust-lang/rust/issues/56105>
   = note: downstream crates may implement trait `Marker` for type `&_`
   = note: this behavior recently changed as a result of a bug fix; see rust-lang/rust#56105 for details
note: the lint level is defined here
  --> $DIR/negative-coherence-placeholder-region-constraints-on-unification.rs:4:11
   |
LL | #![forbid(coherence_leak_check)]
   |           ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

